# TrabalhoRPA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: streamlit-check.yml
documetos/: ODI – Projeto Energral (Checklist Digital – Python + Excel + PDF + Foto).xlsx  ODI.xlsx  PDD - Projeto Energral (Checklist Digital - Python + Excel + PDF + Foto).docx  PDD - Projeto Energral(Checklist Digital - Python + Excel + PDF + Foto).docx  PDD.docx  PDI – Projeto Energral (Checklist Digital – Python + Excel + PDF + Foto).xlsx  PDI.xlsx
projeto/checklist/: checklist_energral.py
projeto/streamlit/: api.py  painel.py  streamlit.py
projeto/streamlit/.streamlit/: config.toml
projeto/streamlit/csv/: alertas_notificacoes.csv  checklist_inspecoes.csv  equipamentos_subestacoes.csv  tecnicos_equipes.csv
